# task_mir_govorit

./: README.md  db.sqlite3  manage.py  pyproject.toml  schema.yml
app_cook/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
app_cook/migrations/: 0001_initial.py  0002_alter_product_options_alter_recipe_options_and_more.py  0002_alter_recipes_dish_alter_recipes_product.py
app_cook/templates/app_cook/: index.html
project_cook/: asgi.py  settings.py  urls.py  wsgi.py
